y.output

state 0
	$accept: .start $end 

	T_IDENTIFIER  shift 18
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	T_INDENT  shift 14
	T_NEWLINE  shift 13
	T_IF  shift 21
	T_FOR  shift 25
	T_CLASS  shift 22
	T_RETURN  shift 12
	(  shift 15
	-  shift 16
	.  error

	expr  goto 6
	number  goto 19
	floating_number  goto 20
	statement  goto 4
	function_decl_statement  goto 8
	function_call  goto 17
	statement_list  goto 3
	class_decl_statement  goto 10
	assignment  goto 7
	if_statement  goto 9
	for_statement  goto 11
	block  goto 5
	top_statement_list  goto 2
	start  goto 1
	class_decl_member  goto 23
	class_decl_method  goto 24

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  top_statement_list.    (1)

	.  reduce 1 (src line 148)


state 3
	top_statement_list:  statement_list.    (2)
	statement_list:  statement_list.T_NEWLINE statement 
	statement_list:  statement_list.T_NEWLINE 

	T_NEWLINE  shift 28
	.  reduce 2 (src line 154)


state 4
	statement_list:  statement.    (6)

	.  reduce 6 (src line 172)


state 5
	statement:  block.    (7)

	.  reduce 7 (src line 180)


state 6
	statement:  expr.    (8)
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 8 (src line 182)


state 7
	statement:  assignment.    (9)

	.  reduce 9 (src line 183)


 8: reduce/reduce conflict  (red'ns 10 and 48) on $end
 8: reduce/reduce conflict  (red'ns 10 and 48) on T_OUTDENT
 8: reduce/reduce conflict  (red'ns 10 and 48) on T_NEWLINE
state 8
	statement:  function_decl_statement.    (10)
	class_decl_method:  function_decl_statement.    (48)

	.  reduce 10 (src line 184)


state 9
	statement:  if_statement.    (11)
	if_statement:  if_statement.T_ELSEIF expr block T_NEWLINE 
	if_statement:  if_statement.T_ELSE block T_NEWLINE 

	T_ELSEIF  shift 41
	T_ELSE  shift 42
	.  reduce 11 (src line 185)


state 10
	statement:  class_decl_statement.    (12)

	.  reduce 12 (src line 186)


state 11
	statement:  for_statement.    (13)

	.  reduce 13 (src line 187)


state 12
	statement:  T_RETURN.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 43
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 13
	statement:  T_NEWLINE.    (15)

	.  reduce 15 (src line 189)


state 14
	block:  T_INDENT.statement_list T_OUTDENT 

	T_IDENTIFIER  shift 18
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	T_INDENT  shift 14
	T_NEWLINE  shift 13
	T_IF  shift 21
	T_FOR  shift 25
	T_CLASS  shift 22
	T_RETURN  shift 12
	(  shift 15
	-  shift 16
	.  error

	expr  goto 6
	number  goto 19
	floating_number  goto 20
	statement  goto 4
	function_decl_statement  goto 8
	function_call  goto 17
	statement_list  goto 45
	class_decl_statement  goto 10
	assignment  goto 7
	if_statement  goto 9
	for_statement  goto 11
	block  goto 5
	class_decl_member  goto 23
	class_decl_method  goto 24

state 15
	expr:  (.expr ) 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 46
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 16
	expr:  -.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 47
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 17
	expr:  function_call.    (64)

	.  reduce 64 (src line 406)


state 18
	assignment:  T_IDENTIFIER.= expr 
	function_decl_statement:  T_IDENTIFIER.T_FUNCTION_PROTOTYPE function_parameter_list T_FUNCTION_GLYPH block 
	function_decl_statement:  T_IDENTIFIER.T_FUNCTION_PROTOTYPE function_parameter_list T_FUNCTION_GLYPH statement 
	class_decl_member:  T_IDENTIFIER.= expr 
	expr:  T_IDENTIFIER.    (65)
	function_call:  T_IDENTIFIER.( function_call_parameter_list ) 

	T_FUNCTION_PROTOTYPE  shift 49
	(  shift 50
	=  shift 48
	.  reduce 65 (src line 409)


state 19
	expr:  number.    (66)

	.  reduce 66 (src line 413)


state 20
	expr:  floating_number.    (67)

	.  reduce 67 (src line 416)


state 21
	if_statement:  T_IF.expr block T_NEWLINE 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 51
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 22
	class_decl_statement:  T_CLASS.T_IDENTIFIER class_decl_extends class_decl_does class_decl_block 

	T_IDENTIFIER  shift 52
	.  error


state 23
	class_decl_statement:  class_decl_member.    (45)

	.  reduce 45 (src line 328)


state 24
	class_decl_statement:  class_decl_method.    (46)

	.  reduce 46 (src line 330)


state 25
	for_statement:  T_FOR.T_IDENTIFIER T_IN listop 

	T_IDENTIFIER  shift 53
	.  error


state 26
	number:  T_NUMBER.    (69)

	.  reduce 69 (src line 425)


state 27
	floating_number:  T_FLOATING.    (68)

	.  reduce 68 (src line 421)


28: shift/reduce conflict (shift 13(0), red'n 5(0)) on T_NEWLINE
state 28
	statement_list:  statement_list T_NEWLINE.statement 
	statement_list:  statement_list T_NEWLINE.    (5)

	T_IDENTIFIER  shift 18
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	T_INDENT  shift 14
	T_NEWLINE  shift 13
	T_IF  shift 21
	T_FOR  shift 25
	T_CLASS  shift 22
	T_RETURN  shift 12
	(  shift 15
	-  shift 16
	.  reduce 5 (src line 171)

	expr  goto 6
	number  goto 19
	floating_number  goto 20
	statement  goto 54
	function_decl_statement  goto 8
	function_call  goto 17
	class_decl_statement  goto 10
	assignment  goto 7
	if_statement  goto 9
	for_statement  goto 11
	block  goto 5
	class_decl_member  goto 23
	class_decl_method  goto 24

state 29
	expr:  expr +.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 55
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 30
	expr:  expr -.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 56
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 31
	expr:  expr *.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 57
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 32
	expr:  expr /.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 58
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 33
	expr:  expr %.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 59
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 34
	expr:  expr &.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 60
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 35
	expr:  expr |.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 61
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 36
	expr:  expr >.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 62
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 37
	expr:  expr <.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 63
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 38
	expr:  expr T_EQUAL.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 64
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 39
	expr:  expr T_LT_EQUAL.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 65
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 40
	expr:  expr T_GT_EQUAL.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 66
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 41
	if_statement:  if_statement T_ELSEIF.expr block T_NEWLINE 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 67
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 42
	if_statement:  if_statement T_ELSE.block T_NEWLINE 

	T_INDENT  shift 14
	.  error

	block  goto 68

state 43
	statement:  T_RETURN expr.    (14)
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 14 (src line 188)


state 44
	expr:  T_IDENTIFIER.    (65)
	function_call:  T_IDENTIFIER.( function_call_parameter_list ) 

	(  shift 50
	.  reduce 65 (src line 409)


state 45
	block:  T_INDENT statement_list.T_OUTDENT 
	statement_list:  statement_list.T_NEWLINE statement 
	statement_list:  statement_list.T_NEWLINE 

	T_OUTDENT  shift 69
	T_NEWLINE  shift 28
	.  error


state 46
	expr:  ( expr.) 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	)  shift 70
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  error


47: shift/reduce conflict (shift 38(0), red'n 63(11)) on T_EQUAL
47: shift/reduce conflict (shift 39(0), red'n 63(11)) on T_LT_EQUAL
47: shift/reduce conflict (shift 40(0), red'n 63(11)) on T_GT_EQUAL
47: shift/reduce conflict (shift 36(0), red'n 63(11)) on >
47: shift/reduce conflict (shift 37(0), red'n 63(11)) on <
state 47
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 
	expr:  - expr.    (63)

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	>  shift 36
	<  shift 37
	.  reduce 63 (src line 402)


state 48
	assignment:  T_IDENTIFIER =.expr 
	class_decl_member:  T_IDENTIFIER =.expr 

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  error

	expr  goto 71
	number  goto 19
	floating_number  goto 20
	function_call  goto 17

state 49
	function_decl_statement:  T_IDENTIFIER T_FUNCTION_PROTOTYPE.function_parameter_list T_FUNCTION_GLYPH block 
	function_decl_statement:  T_IDENTIFIER T_FUNCTION_PROTOTYPE.function_parameter_list T_FUNCTION_GLYPH statement 
	function_parameter_list: .    (30)

	(  shift 73
	.  reduce 30 (src line 263)

	function_parameter_list  goto 72

state 50
	function_call:  T_IDENTIFIER (.function_call_parameter_list ) 
	function_call_parameter_list: .    (73)

	T_IDENTIFIER  shift 44
	T_FLOATING  shift 27
	T_NUMBER  shift 26
	(  shift 15
	-  shift 16
	.  reduce 73 (src line 445)

	expr  goto 76
	number  goto 19
	floating_number  goto 20
	function_call_parameter  goto 75
	function_call_parameter_list  goto 74
	function_call  goto 17

state 51
	if_statement:  T_IF expr.block T_NEWLINE 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	T_INDENT  shift 14
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  error

	block  goto 77

state 52
	class_decl_statement:  T_CLASS T_IDENTIFIER.class_decl_extends class_decl_does class_decl_block 
	class_decl_extends: .    (37)

	T_EXTENDS  shift 79
	.  reduce 37 (src line 301)

	class_decl_extends  goto 78

state 53
	for_statement:  T_FOR T_IDENTIFIER.T_IN listop 

	T_IN  shift 80
	.  error


state 54
	statement_list:  statement_list T_NEWLINE statement.    (4)

	.  reduce 4 (src line 163)


55: shift/reduce conflict (shift 38(0), red'n 51(8)) on T_EQUAL
55: shift/reduce conflict (shift 39(0), red'n 51(8)) on T_LT_EQUAL
55: shift/reduce conflict (shift 40(0), red'n 51(8)) on T_GT_EQUAL
55: shift/reduce conflict (shift 36(0), red'n 51(8)) on >
55: shift/reduce conflict (shift 37(0), red'n 51(8)) on <
state 55
	expr:  expr.+ expr 
	expr:  expr + expr.    (51)
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 51 (src line 354)


56: shift/reduce conflict (shift 38(0), red'n 52(8)) on T_EQUAL
56: shift/reduce conflict (shift 39(0), red'n 52(8)) on T_LT_EQUAL
56: shift/reduce conflict (shift 40(0), red'n 52(8)) on T_GT_EQUAL
56: shift/reduce conflict (shift 36(0), red'n 52(8)) on >
56: shift/reduce conflict (shift 37(0), red'n 52(8)) on <
state 56
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr - expr.    (52)
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 52 (src line 358)


57: shift/reduce conflict (shift 38(0), red'n 53(9)) on T_EQUAL
57: shift/reduce conflict (shift 39(0), red'n 53(9)) on T_LT_EQUAL
57: shift/reduce conflict (shift 40(0), red'n 53(9)) on T_GT_EQUAL
57: shift/reduce conflict (shift 36(0), red'n 53(9)) on >
57: shift/reduce conflict (shift 37(0), red'n 53(9)) on <
state 57
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr * expr.    (53)
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	>  shift 36
	<  shift 37
	.  reduce 53 (src line 362)


58: shift/reduce conflict (shift 38(0), red'n 54(9)) on T_EQUAL
58: shift/reduce conflict (shift 39(0), red'n 54(9)) on T_LT_EQUAL
58: shift/reduce conflict (shift 40(0), red'n 54(9)) on T_GT_EQUAL
58: shift/reduce conflict (shift 36(0), red'n 54(9)) on >
58: shift/reduce conflict (shift 37(0), red'n 54(9)) on <
state 58
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr / expr.    (54)
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	>  shift 36
	<  shift 37
	.  reduce 54 (src line 366)


59: shift/reduce conflict (shift 38(0), red'n 55(9)) on T_EQUAL
59: shift/reduce conflict (shift 39(0), red'n 55(9)) on T_LT_EQUAL
59: shift/reduce conflict (shift 40(0), red'n 55(9)) on T_GT_EQUAL
59: shift/reduce conflict (shift 36(0), red'n 55(9)) on >
59: shift/reduce conflict (shift 37(0), red'n 55(9)) on <
state 59
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr % expr.    (55)
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	>  shift 36
	<  shift 37
	.  reduce 55 (src line 370)


60: shift/reduce conflict (shift 38(0), red'n 56(7)) on T_EQUAL
60: shift/reduce conflict (shift 39(0), red'n 56(7)) on T_LT_EQUAL
60: shift/reduce conflict (shift 40(0), red'n 56(7)) on T_GT_EQUAL
60: shift/reduce conflict (shift 36(0), red'n 56(7)) on >
60: shift/reduce conflict (shift 37(0), red'n 56(7)) on <
state 60
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr & expr.    (56)
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 56 (src line 374)


61: shift/reduce conflict (shift 38(0), red'n 57(5)) on T_EQUAL
61: shift/reduce conflict (shift 39(0), red'n 57(5)) on T_LT_EQUAL
61: shift/reduce conflict (shift 40(0), red'n 57(5)) on T_GT_EQUAL
61: shift/reduce conflict (shift 36(0), red'n 57(5)) on >
61: shift/reduce conflict (shift 37(0), red'n 57(5)) on <
state 61
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr | expr.    (57)
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 57 (src line 378)


62: shift/reduce conflict (shift 38(0), red'n 58(0)) on T_EQUAL
62: shift/reduce conflict (shift 39(0), red'n 58(0)) on T_LT_EQUAL
62: shift/reduce conflict (shift 40(0), red'n 58(0)) on T_GT_EQUAL
62: shift/reduce conflict (shift 35(5), red'n 58(0)) on |
62: shift/reduce conflict (shift 34(7), red'n 58(0)) on &
62: shift/reduce conflict (shift 29(8), red'n 58(0)) on +
62: shift/reduce conflict (shift 30(8), red'n 58(0)) on -
62: shift/reduce conflict (shift 31(9), red'n 58(0)) on *
62: shift/reduce conflict (shift 32(9), red'n 58(0)) on /
62: shift/reduce conflict (shift 33(9), red'n 58(0)) on %
62: shift/reduce conflict (shift 36(0), red'n 58(0)) on >
62: shift/reduce conflict (shift 37(0), red'n 58(0)) on <
state 62
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr > expr.    (58)
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 58 (src line 382)


63: shift/reduce conflict (shift 38(0), red'n 59(0)) on T_EQUAL
63: shift/reduce conflict (shift 39(0), red'n 59(0)) on T_LT_EQUAL
63: shift/reduce conflict (shift 40(0), red'n 59(0)) on T_GT_EQUAL
63: shift/reduce conflict (shift 35(5), red'n 59(0)) on |
63: shift/reduce conflict (shift 34(7), red'n 59(0)) on &
63: shift/reduce conflict (shift 29(8), red'n 59(0)) on +
63: shift/reduce conflict (shift 30(8), red'n 59(0)) on -
63: shift/reduce conflict (shift 31(9), red'n 59(0)) on *
63: shift/reduce conflict (shift 32(9), red'n 59(0)) on /
63: shift/reduce conflict (shift 33(9), red'n 59(0)) on %
63: shift/reduce conflict (shift 36(0), red'n 59(0)) on >
63: shift/reduce conflict (shift 37(0), red'n 59(0)) on <
state 63
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr < expr.    (59)
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 59 (src line 386)


64: shift/reduce conflict (shift 38(0), red'n 60(0)) on T_EQUAL
64: shift/reduce conflict (shift 39(0), red'n 60(0)) on T_LT_EQUAL
64: shift/reduce conflict (shift 40(0), red'n 60(0)) on T_GT_EQUAL
64: shift/reduce conflict (shift 35(5), red'n 60(0)) on |
64: shift/reduce conflict (shift 34(7), red'n 60(0)) on &
64: shift/reduce conflict (shift 29(8), red'n 60(0)) on +
64: shift/reduce conflict (shift 30(8), red'n 60(0)) on -
64: shift/reduce conflict (shift 31(9), red'n 60(0)) on *
64: shift/reduce conflict (shift 32(9), red'n 60(0)) on /
64: shift/reduce conflict (shift 33(9), red'n 60(0)) on %
64: shift/reduce conflict (shift 36(0), red'n 60(0)) on >
64: shift/reduce conflict (shift 37(0), red'n 60(0)) on <
state 64
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr T_EQUAL expr.    (60)
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 60 (src line 390)


65: shift/reduce conflict (shift 38(0), red'n 61(0)) on T_EQUAL
65: shift/reduce conflict (shift 39(0), red'n 61(0)) on T_LT_EQUAL
65: shift/reduce conflict (shift 40(0), red'n 61(0)) on T_GT_EQUAL
65: shift/reduce conflict (shift 35(5), red'n 61(0)) on |
65: shift/reduce conflict (shift 34(7), red'n 61(0)) on &
65: shift/reduce conflict (shift 29(8), red'n 61(0)) on +
65: shift/reduce conflict (shift 30(8), red'n 61(0)) on -
65: shift/reduce conflict (shift 31(9), red'n 61(0)) on *
65: shift/reduce conflict (shift 32(9), red'n 61(0)) on /
65: shift/reduce conflict (shift 33(9), red'n 61(0)) on %
65: shift/reduce conflict (shift 36(0), red'n 61(0)) on >
65: shift/reduce conflict (shift 37(0), red'n 61(0)) on <
state 65
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr T_LT_EQUAL expr.    (61)
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 61 (src line 394)


66: shift/reduce conflict (shift 38(0), red'n 62(0)) on T_EQUAL
66: shift/reduce conflict (shift 39(0), red'n 62(0)) on T_LT_EQUAL
66: shift/reduce conflict (shift 40(0), red'n 62(0)) on T_GT_EQUAL
66: shift/reduce conflict (shift 35(5), red'n 62(0)) on |
66: shift/reduce conflict (shift 34(7), red'n 62(0)) on &
66: shift/reduce conflict (shift 29(8), red'n 62(0)) on +
66: shift/reduce conflict (shift 30(8), red'n 62(0)) on -
66: shift/reduce conflict (shift 31(9), red'n 62(0)) on *
66: shift/reduce conflict (shift 32(9), red'n 62(0)) on /
66: shift/reduce conflict (shift 33(9), red'n 62(0)) on %
66: shift/reduce conflict (shift 36(0), red'n 62(0)) on >
66: shift/reduce conflict (shift 37(0), red'n 62(0)) on <
state 66
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 
	expr:  expr T_GT_EQUAL expr.    (62)

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  reduce 62 (src line 398)


state 67
	if_statement:  if_statement T_ELSEIF expr.block T_NEWLINE 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.> expr 
	expr:  expr.< expr 
	expr:  expr.T_EQUAL expr 
	expr:  expr.T_LT_EQUAL expr 
	expr:  expr.T_GT_EQUAL expr 

	T_EQUAL  shift 38
	T_LT_EQUAL  shift 39
	T_GT_EQUAL  shift 40
	T_INDENT  shift 14
	|  shift 35
	&  shift 34
	+  shift 29
	-  shift 30
	*  shift 31
	/  shift 32
	%  shift 33
	>  shift 36
	<  shift 37
	.  error

	block  goto 81

state 68
	if_statement:  if_statement T_ELSE block.T_NEWLINE 

	T_NEWLINE  shift 82
	.  error


state 69
	block:  T_INDENT statement_list T_OUTDENT.    (3)

	.  reduce 3 (src line 161)


state 70
	expr:  ( expr ).    (50)

	.  reduce 50 (src line 344)

